# SBGames

./: .cirrus.yml  .env.example  .gitignore  .gitlab-ci.yml  BUILD.md  CLAUDE.md  CROSSPLATFORM.md  PLAN_CUSTOM_MODPACKS.md  deploy_now.cjs  ecosystem.config.cjs  fix_dup.js  fix_group_send.js  games-sb-capital.conf  index.html  package-lock.json  package.json  patch_accounts_load.js  patch_fix_comment.js  patch_nginx_security.conf  patch_online_fix.js  patch_redis.js  patch_server.js  patch_start.js  sbgames-api.conf  server_index.bak_from_server.js  server_index.fixed.js  server_index.js  server_index_clean.js  server_package.json  tailwind.config.js  tray.html  vite.config.js
.claude/: settings.local.json
.github/workflows/: build.yml  deploy-website.yml  deploy.yml
.mimocode/plans/: 1782737716783-brave-engine.md  1782783001332-misty-falcon.md
content/forum/: _ai-state.json  _ai-topics.json
content/forum/articles/: forge-vs-fabric.md  minecraft-1-20-trails-tales.md  minecraft-1-21-tricky-trials.md  minecraft-26-3-obzor-obnovleniya.md
content/forum/maps/: best-parkour-maps-1-20.md  luchshie-karty-na-prohozhenie-dlya-minecraft-26-3.md
content/forum/modpacks/: better-minecraft-modpack.md  luchshie-sborki-modov-dlya-minecraft-26-3.md  luchshie-sborni-modov-dlya-minecraft-26-3.md  luchshie-sborny-modov-minecraft-26-3.md
content/forum/mods/: jei-1-20-1.md  luchshie-mody-na-optimizatsiyu-minecraft-26-3.md  optifine-1-20-1.md  sodium-1-20-1.md
content/forum/shaders/: best-shaders-minecraft-26-3.md  complementary-shaders-1-20.md  luchshie-shajdery-dlya-minecraft-26-3.md  luchshie-shejdery-dlya-minecraft-26-3.md  luchshie-sheydery-dlya-minecraft-26-3.md
content/forum/skins/: how-to-change-skin-minecraft.md  kak-pomenyat-skin-v-minecraft-26-3.md
content/forum/textures/: bdcraft.md  faithful-32x.md  luchshie-realistichnye-tekstury-paki-dlya-minecraft-26-3.md
dev/: null
dist-tray/: notification.html  tray.html
dist-tray/assets/: main-6-Mem9d8.css  main-BAUMhyv4.js  main-BHt2j5_U.css  main-BZu09Fpq.css  main-CTiVy0ee.js  main-CZfNIXRP.js  main-CbxroSJQ.js  main-CpSKU2Bc.css  main-DqTbwhFd.js  main-EW3HcfvH.css
docs/superpowers/plans/: 2026-06-19-themed-cursors-v2.md
docs/superpowers/specs/: 2026-06-19-themed-cursors-v2-design.md  2026-06-24-download-page-redesign-design.md  2026-06-24-forum-content-platform-design.md
public/: notification.html
releases/SBGames-Linux/deb/: SBGames Launcher_1.0.0_amd64.deb
releases/SBGames-Windows/msi/: SBGames Launcher_1.0.0_x64_en-US.msi
releases/SBGames-macOS/: SBGames Launcher_1.0.0_aarch64.dmg
scratch/: add_nginx_affiliate.cjs  check_bg.cjs  check_configs.cjs  check_csp.cjs  check_current_nginx.cjs  check_dirs3.cjs  check_dns.cjs  check_enabled.cjs  check_nginx.cjs  check_nginx_bg.cjs  check_nginx_error.cjs  check_pm2.cjs  check_ports.cjs  check_server.cjs  chinese.txt  cleanup_nginx.cjs  copy_backgrounds.cjs  debug_bg.cjs  deploy_new_server.cjs  deploy_nginx_games.cjs  deploy_server.cjs  deploy_website.cjs  deploy_website_new.cjs  deploy_website_new2.cjs  download_proguard.js  fix_csp.cjs  fix_new_server.cjs  fix_nginx2.cjs  fix_nginx_affiliate.cjs  fix_nginx_bg.cjs  fix_nginx_link.cjs  generate_bootstrap.js  inspect_png.js  list_nginx.cjs  obf_dict.txt  obfuscate.js  proguard.conf  read_remote_server.js  remote_server_index.js  restart_nginx.cjs  (+22 more)
scripts/: Dockerfile.cirrus-linux  Dockerfile.linux  ai-cron.sh  ai-generate.cjs  ai-pipeline.cjs  build-all.sh  build-forum.cjs  build-linux.sh  gen-attest.mjs  protect.mjs  release.sh  server-hardening.sh  setup-server.sh  web-search.cjs
server/: deploy.sh  index.js  package-lock.json  package.json
server-files/: deploy-nginx.sh  modpack.js  sbgames-nginx.conf  verify.js
site/: browserconfig.xml  index.html  manifest.json  robots.txt  sitemap.xml
src/: App.jsx  index.css  main.jsx  mcbar.html  mcbar.jsx  tray.jsx
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: attest.rs  instance.rs  java.rs  launcher.rs  lib.rs  main.rs  mods.rs  mrpack.rs  vm.rs
src-tauri/src/loaders/: fabric.rs  forge.rs  meta_based.rs  mod.rs  neoforge.rs  quilt.rs  vanilla.rs
src/components/: AchievementShowcase.jsx  AchievementSystem.jsx  CustomCursor.jsx  DownloadProgress.jsx  ErrorBoundary.jsx  FilePicker.jsx  NotificationSystem.jsx  ProfileComments.jsx  RecentActivityCard.jsx  SkinViewer.jsx  Titlebar.jsx  UpdateNotifier.jsx
src/lib/: api.js  modrinth.js  pixelCursors.js  tauri.js  window.js  ws.js
src/pages/: CommunityPage.jsx  InventoryTab.jsx  LeaderboardPage.jsx  LibraryTab.jsx  LoginPage.jsx  MainLayout.jsx  NewsPage.jsx  PlayPage.jsx  ProfilePage.jsx  ScreenshotsPage.jsx  ShopPage.jsx  SupportModal.jsx  SupportPage.jsx  TrayPopup.jsx  catalog.js
website/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
website/public/: _headers  browserconfig.xml  manifest.json  robots.txt  sitemap.xml
website/src/: App.jsx  index.css  main.jsx
website/src/components/: DownloadModal.jsx  DownloadTrigger.jsx  Navbar.jsx  Snow.jsx
website/src/lib/: api.js  useDeviceDetect.js
(+184 files in other folders)
