[package]
name = "sbgames-launcher"
version = "1.0.0"
description = "SB Games Minecraft Launcher"
authors = ["SB Games Team"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "sbgames_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell        = "2"
tauri-plugin-notification = "2"
discord-rich-presence     = "0.2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
sha1         = "0.10"
reqwest      = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
zip          = "0.6"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_Security",
]

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "symbols"
overflow-checks = false
debug = false
debug-assertions = false
incremental = false
