[package]
name = "sbgames-launcher"
version = "1.1.0"
description = "SB Games Minecraft Launcher"
authors = ["SB Games Team"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "sbgames_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-shell        = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater      = "2"
tauri-plugin-process      = "2"
discord-rich-presence     = "0.2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
sha1         = "0.10"
sha2         = "0.10"
hmac         = "0.12"
hex          = "0.4"
reqwest      = { version = "0.12", features = ["stream", "json"] }
futures-util = "0.3"
zip          = "0.6"
tokio        = { version = "1", features = ["full"] }
dirs-next    = "2"
libloading   = "0.8"
jni          = { version = "0.21", features = ["invocation"] }
walkdir      = "2"
uuid         = { version = "1", features = ["v4", "serde"] }
async-trait  = "0.1"
tar          = "0.4"
flate2       = "1.0"
libc         = "0.2"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_Security",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_JobObjects",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
