[package]
name = "sbgames-launcher"
version = "1.1.0"
description = "SB Games Minecraft Launcher"
authors = ["SB Games Team"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "sbgames_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri        = { version = "2", features = ["tray-icon", "image-png", "devtools"] }
tauri-plugin-shell        = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater      = "2"
tauri-plugin-process      = "2"
discord-rich-presence     = "0.2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
sha1         = "0.10"
sha2         = "0.10"
hmac         = "0.12"
hex          = "0.4"
reqwest      = { version = "0.12", features = ["stream", "json", "http2"] }
futures-util = "0.3"
zip          = "0.6"
tokio        = { version = "1", features = ["full"] }
dirs-next    = "2"
libloading   = "0.8"
jni          = { version = "0.21", features = ["invocation"] }
walkdir      = "2"
uuid         = { version = "1", features = ["v4", "serde"] }
async-trait  = "0.1"
tar          = "0.4"
flate2       = "1.0"
libc         = "0.2"
obfstr       = "0.4"   # обфускация строковых литералов в бинаре

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52"
features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_Security",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_JobObjects",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_LibraryLoader",
]

[profile.release]
opt-level = 3
lto = "thin"         # thin LTO: ~95% оптимизации fat, но кратно быстрее и параллельно
codegen-units = 1     # один codegen-unit для нашего кода — максимум инлайна/обфускации
panic = "abort"       # без unwind-таблиц и panic-метаданных
strip = "symbols"     # вырезать ВСЕ символы (имена функций/переменных)
debug = false         # без debug-инфо
overflow-checks = false
incremental = false
rpath = false

# Зависимости собираем с дефолтным параллелизмом (codegen-units не = 1).
# Это резко ускоряет холодную сборку без потери защиты: наш собственный код
# всё равно проходит через thin LTO + strip + единый codegen-unit выше.
[profile.release.package."*"]
opt-level = 3
codegen-units = 16
